--- a/ProjectInfoCovid19/app/src/main/res/layout/history_item_holder.xml
+++ b/ProjectInfoCovid19/app/src/main/res/layout/history_item_holder.xml
@@ -46,7 +46,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
-                    android:src="@drawable/ic_trending_up" />
+                    android:src="@drawable/ic_baseline_trending_up_24"
+                    android:layout_marginRight="5dp" />
 
                 <TextView
                     android:id="@+id/tvListConfirmed"
@@ -55,13 +56,15 @@
                     android:layout_marginEnd="10dp"
                     android:text="@string/confirmed"
                     android:textColor="@android:color/white"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:layout_marginRight="10dp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
-                    android:src="@drawable/ic_trending_down" />
+                    android:src="@drawable/ic_baseline_trending_down_24"
+                    android:layout_marginRight="5dp" />
 
                 <TextView
                     android:id="@+id/tvListRecovered"
@@ -70,13 +73,15 @@
                     android:layout_marginEnd="10dp"
                     android:text="@string/recovered"
                     android:textColor="@android:color/white"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:layout_marginRight="10dp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
-                    android:src="@drawable/ic_dead" />
+                    android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
+                    android:layout_marginRight="5dp" />
 
                 <TextView
                     android:id="@+id/tvListDeath"
