--- a/ProjectInfoCovid19/app/src/main/res/layout/fragment_riwayat.xml
+++ b/ProjectInfoCovid19/app/src/main/res/layout/fragment_riwayat.xml
@@ -19,13 +19,15 @@
             android:layout_marginEnd="10dp"
             android:text="@string/keterangan"
             android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginRight="10dp" />
 
         <ImageView
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:layout_marginEnd="2dp"
-            android:src="@drawable/ic_trending_up" />
+            android:src="@drawable/ic_baseline_trending_up_24"
+            android:layout_marginRight="2dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,13 +35,15 @@
             android:layout_marginEnd="10dp"
             android:text="@string/confirmed"
             android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginRight="10dp" />
 
         <ImageView
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:layout_marginEnd="2dp"
-            android:src="@drawable/ic_trending_down" />
+            android:src="@drawable/ic_baseline_trending_down_24"
+            android:layout_marginRight="2dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,13 +51,15 @@
             android:layout_marginEnd="10dp"
             android:text="@string/recovered"
             android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginRight="10dp" />
 
         <ImageView
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:layout_marginEnd="2dp"
-            android:src="@drawable/ic_dead" />
+            android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
+            android:layout_marginRight="2dp" />
 
         <TextView
             android:layout_width="wrap_content"
